--- a/.gitattributes
+++ b/.gitattributes
@@ -1,12 +1,4 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 
-# Source files
-# ============
-*.Rdata     	text
-*.rdb       	binary
-*.rds       	binary
-*.Rd        	text
-*.Rdx       	binary
-*.Rmd		text
-*.R  		text
+*.Rmd linguist-language=R
