--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-architect
+title: Project Page for Soils and Hydrology teaching materials i've created
+description: Code to create graphs for teaching.
