--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-architect
-title: Project Page for Soils and Hydrology teaching materials i've created
+title: Teaching materials created by Seth
 description: Code to create graphs for teaching.
