--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: Teaching materials created by Seth
-description: Code to create graphs for teaching soils and hydrology.
+title: Seth's teaching materials
+description: Code to create graphs for teaching soils and hydrology 3060.
